# Real3Dplot

./: .gitignore  README.md  pyproject.toml
examples/: cluster_demo.csv  cluster_demo.csv.dashboard.html  cluster_demo.tsv  cluster_demo.tsv.dashboard.html  cluster_demo.xlsx  cluster_demo.xlsx.dashboard.html
scripts/: generate_sample_data.py
src/three_d_plot_dashboard/: __init__.py  __main__.py  cli.py  html_builder.py  pipeline.py
src/three_d_plot_dashboard/templates/: dashboard.html
tests/: test_pipeline.py
